# sample_using_sysrepo

./: CMakeLists.txt  run.sh
